src/objects/TCB__c.object
<CustomObject>
    <fields>
        <fullName>PL_40FT_HC__c</fullName>
        <formula>PL_40FT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL/ 40FT HC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL_40FT__c</fullName>
        <label>PL/ 40FT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Type_1st__c</fullName>
        <label>PM Type (1st)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1st_PM_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Type_2nd__c</fullName>
        <label>PM Type (2nd)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X2nd_PM_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_20FT_FL__c</fullName>
        <formula>CTN_20FT__c * Unit_CTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 20FT (FL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_20FT_PL__c</fullName>
        <formula>Unit_CTN__c * CTN_Layer__c * Layer_PL__c *  PL_20FT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 20FT (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_40FT_FL__c</fullName>
        <formula>CTN_40FT__c * Unit_CTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 40FT (FL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_40FT_HC_FL__c</fullName>
        <formula>CTN_40FT_HC__c * Unit_CTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 40FT HC (FL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_40FT_HC_PL__c</fullName>
        <formula>Unit_CTN__c * CTN_Layer__c *  Layer_PL_40HC__c *  PL_40FT_HC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 40FT HC (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_40FT_PL__c</fullName>
        <formula>Unit_CTN__c * CTN_Layer__c * Layer_PL__c *  PL_40FT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ 40FT (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_40HC_PL__c</fullName>
        <formula>Unit_CTN__c * CTN_Layer__c *  Layer_PL_40HC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ (40HC) (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_PL__c</fullName>
        <formula>Unit_CTN__c * CTN_Layer__c * Layer_PL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack/ PL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Cost_lbs__c</fullName>
        <label>Packing Cost ($/lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packing_TCB__c</fullName>
        <formula>Packing_Cost_lbs__c * Opportunity__r.Plbs_Weight_G__c / 1000 * 2.2046</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packing_loss__c</fullName>
        <label>Packing loss %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pallet_Cost_USD_EA__c</fullName>
        <label>Pallet Cost (USD/EA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pallet_Height_mm__c</fullName>
        <formula>14.4*10+ Layer_PL__c *  Height_mm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pallet Height (mm)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_TCB__c</fullName>
        <formula>IF( ISPICKVAL( Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Pallet_Cost_USD_EA__c /  Pack_40HC_PL__c , Pallet_Cost_USD_EA__c /  Pack_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pallet (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pallet_Type__c</fullName>
        <label>Pallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pallet_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TCBs (Opportunity)</relationshipLabel>
        <relationshipName>TCBs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Port_Olam_WH_USD_Cont__c</fullName>
        <label>Port - Olam WH (USD/Cont)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Port_of_Entry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Port of Entry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Printing_2nd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Printing (2nd)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_TCB__c</fullName>
        <formula>Total_Ingredient_Price__c *  Opportunity__r.Plbs_Weight_G__c / 1000 /( 1 -  Loss_Product__c )*2.2046</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotations_Given_as_Per__c</fullName>
        <label>Quotations Given as Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quotations_Given_as_Per</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relative_Carton_Efficiency__c</fullName>
        <formula>Opportunity__r.Plbs_Weight_G__c *  Unit_CTN__c / Nut_Density_g_ml__c /  Case_CBM_m3__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Carton Efficiency %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Price_USD__c</fullName>
        <formula>Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c *  Opportunity__r.Plbs_Shelf_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price (USD)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Structure_2nd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Structure (2nd)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCB_1st_PM_Pouch_Jar__c</fullName>
        <formula>ROUND( X1st_PM_Pouch_jar__c /(1- Loss_1st_PM__c )/   Opportunity__r.Parent_Opportunity__r.Exchange_Rate_USD_VND__c,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st PM (Pouch/ Jar) (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCB_2nd_PM_Outer__c</fullName>
        <formula>X2nd_PM_Carton__c /(1 -  Loss_2nd_PM_Carton__c )/  Opportunity__r.Parent_Opportunity__r.Exchange_Rate_USD_VND__c  / Unit_CTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd PM (Outer) (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCB_FOB__c</fullName>
        <description>Olam_Opportunity_TCB_FOB__c, This field must used in Classes</description>
        <label>FOB (TCB)_</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tare_Weight_g_1st__c</fullName>
        <label>Tare Weight (g) (1st)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tare_Weight_g_2nd__c</fullName>
        <label>Tare Weight (g) (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Ingredient_Price__c</fullName>
        <formula>Opportunity__r.Total_Ingredient_Price_No_Processing__c + Opportunity_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ingredient Price</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trucking_Pack_FL__c</fullName>
        <formula>IF(ISPICKVAL( Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  WH_to_Customers_DC_Cost_USD_Pallet__c /  Pack_40HC_PL__c, WH_to_Customers_DC_Cost_USD_Pallet__c /  Pack_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trucking/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trucking_to_Final_Dest_Pack_PL__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  WH_to_Customers_DC_Cost_USD_Pallet__c /  Pack_40HC_PL__c , WH_to_Customers_DC_Cost_USD_Pallet__c /  Pack_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trucking to Final Dest./ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_CTN__c</fullName>
        <label>Unit/ CTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_20DC_FL__c</fullName>
        <formula>CBM_20FT_FL__c /32.58</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/20DC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_20DC_PL__c</fullName>
        <formula>CBM_20DC_PL__c /32.58</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/20DC (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_40DC_FL__c</fullName>
        <formula>CBM_40FT_FL__c /66</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/40DC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_40DC_PL__c</fullName>
        <formula>CBM_40DC_PL__c/66</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/40DC (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_40HC_FL__c</fullName>
        <formula>CBM_40HC_FL__c /74</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/40HC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_40HC_PL__c</fullName>
        <formula>CBM_40HC_PL__c /74</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization/40HC (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WH_Cost_Dest_Pack_FL__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Olam_WHs_Cost_USD_Pallet_Incl_PLT__c /  Pack_40HC_PL__c , Olam_WHs_Cost_USD_Pallet_Incl_PLT__c /  Pack_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Cost (Dest.)/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WH_Cost_Dest_Pack_PL__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Olam_WHs_Cost_USD_Pallet_Excl_PLT__c /  Pack_40HC_PL__c ,Olam_WHs_Cost_USD_Pallet_Excl_PLT__c  /  Pack_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Cost (Dest.)/ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WH_to_Customers_DC_Cost_USD_Pallet__c</fullName>
        <label>WH to Customer&apos;s DC Cost (USD/Pallet)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Width_mm_1st__c</fullName>
        <label>Width (mm) (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_mm_2nd__c</fullName>
        <label>Width (mm) (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_PM_Pouch_jar__c</fullName>
        <label>PM (Pouch/jar) VND/EA (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Printing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Printing (1st)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Structure (1st)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_PM_Carton__c</fullName>
        <label>PM (Carton) - VND/EA (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TCB</label>
    <nameField>
        <displayFormat>TCB - {00000}</displayFormat>
        <label>TCB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>